--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -69,6 +69,8 @@
     <Compile Include="DTOs\Requisicion\RequisicionEDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionProductoCrearDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionProductoDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionProductoRevisionDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionRevisionDTO.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaDto.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaRequisicionDto.cs" />
     <Compile Include="DTOs\Seguridad\AutenticacionDto.cs" />
