--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -64,13 +64,19 @@
     <Compile Include="DTOs\Catalogo\UsuarioDTO.cs" />
     <Compile Include="DTOs\Compras\RespuestaCompraDto.cs" />
     <Compile Include="DTOs\Mobile\MenuDto.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionAutorizacionDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionAutPutDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionCrearDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionEDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionProdAutPutDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionProdReviPutDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionProductoAutorizacionDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionProductoCrearDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionProductoDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionProductoRevisionDTO.cs" />
     <Compile Include="DTOs\Requisicion\RequisicionRevisionDTO.cs" />
+    <Compile Include="DTOs\Requisicion\RequisicionRevPutDTO.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaDto.cs" />
     <Compile Include="DTOs\Respuesta\RespuestaRequisicionDto.cs" />
     <Compile Include="DTOs\Seguridad\AutenticacionDto.cs" />
@@ -85,11 +91,13 @@
     <Compile Include="Flujos\Ventas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Servicios\AccesoADatos\AdministracionCentralDataAccess.cs" />
+    <Compile Include="Servicios\AccesoADatos\AlmacenDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\EmpresaDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\ProductoDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\RequisicionDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\UsuarioACDataAccess.cs" />
     <Compile Include="Servicios\AccesoADatos\UsuarioDataAccess.cs" />
+    <Compile Include="Servicios\Almacen\ProductoAlmacenServicio.cs" />
     <Compile Include="Servicios\Catalogos\EmpresaServicio.cs" />
     <Compile Include="Servicios\Catalogos\ProductoServicios.cs" />
     <Compile Include="Servicios\Catalogos\UsuarioServicio.cs" />
