--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -26,6 +26,7 @@
     <add key="PostRequisicion" value="api/requisicion/guardar/requisicion"/>
     <add key="GetRequisicionesByIdEmpresa" value="api/requisicion/buscar/requisiciones/"/>
     <add key="GetRequisicionByNumRequisicion" value="api/requisicion/buscar/requisicion/"/>
+    <add key="GetRequisicionByNumRequisicionAut" value="api/requisicion/buscar/requisicion/autorizacion/"/>
     <add key="PutActulizarRevision" value="api/requisicion/update/requisicion/revision"/>
     <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion"/>
     <!--Requisicion-->
