KSH-14/08/2018 Respaldo de cambios

--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
@@ -67,6 +67,7 @@
     <Compile Include="NotValidInvoiceMonthException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Validaciones\Error.cs" />
+    <Compile Include="Validaciones\Exito.cs" />
     <Compile Include="Validaciones\ExpresionRegular.cs" />
   </ItemGroup>
   <ItemGroup>
