CVG - 14/08/2018 Aplicacion funcional hasta tomar imagenes

--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/src/main/AndroidManifest.xml
@@ -40,7 +40,10 @@
 
         <activity
             android:name=".Activity.CameraDescargaActivity"
-            android:label="@string/title_registro_papeleta" />
+            android:label="@string/title_proceso_descarga" />
+        <activity
+            android:name=".Activity.SubirImagenesActivity"
+            android:label="@string/title_proceso_descarga" />
 
         <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
      See README(https://goo.gl/l4GJaQ) for more. -->
