KSH-15/08/2018 Se crean las puertas almacenes y medidores para la app

--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.4Exceptions/Exceptions.MainModule/Exceptions.MainModule.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CatchInnerException.cs" />
     <Compile Include="NotFoundException.cs" />
     <Compile Include="NotValidCodeException.cs" />
     <Compile Include="NotValidInvoiceMonthException.cs" />
