--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.5Security/Security.MainModule/Security.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.5Security/Security.MainModule/Security.MainModule.csproj
@@ -91,6 +91,7 @@
     <Compile Include="DirectorioINFOTEC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Token Service\TokenAutorizacion.cs" />
+    <Compile Include="Token Service\TokenEtiquetasEnum.cs" />
     <Compile Include="Token Service\TokenGenerator.cs" />
     <Compile Include="Token Service\TokenValidationHandler.cs" />
     <Compile Include="UsuarioAD.cs" />
