--- a/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.6Utilities/Utilities.MainModule/Utilities.MainModule.csproj
+++ b/1.Layers/1.5Infrastructure/1.5.2Cross Cutting/1.5.2.6Utilities/Utilities.MainModule/Utilities.MainModule.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Web" />
