--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -44,6 +44,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AjaxControlToolkit, Version=15.1.3.0, Culture=neutral, PublicKeyToken=28f01b0e84b6d53e, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\AjaxControlToolkit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=1.2.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Microsoft.ApplicationInsights.Agent.Intercept.1.2.1\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
@@ -150,7 +154,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Compras\Model\" />
-    <Folder Include="OrdenCompra\Servisio\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="assets\bundles\chartscripts.bundle.js" />
@@ -3599,7 +3602,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Controles\DateTimePicker.ascx" />
     <Content Include="DashBoard\Vista\Dashboard.aspx" />
+    <Content Include="fonts\cal.png" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -3815,6 +3820,7 @@
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="fonts\Logo GMG.JPG" />
     <Content Include="Login.aspx" />
+    <Content Include="OrdenCompra\Vistas\Compra.aspx" />
     <Content Include="OrdenCompra\Vistas\OrdenCompra.aspx" />
     <Content Include="Requisicion\Vistas\Requisicion.aspx" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
@@ -3871,6 +3877,24 @@
     <Compile Include="Agente\AgenteServicios.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controles\DateTimePicker.ascx.cs">
+      <DependentUpon>DateTimePicker.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Controles\DateTimePicker.ascx.designer.cs">
+      <DependentUpon>DateTimePicker.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="OrdenCompra\Model\ProdcutoOC.cs" />
+    <Compile Include="OrdenCompra\Model\ProveedorDTO.cs" />
+    <Compile Include="OrdenCompra\Model\RequisicionOCDTO.cs" />
+    <Compile Include="OrdenCompra\Servisio\OrdenCompraServicio.cs" />
+    <Compile Include="OrdenCompra\Vistas\Compra.aspx.cs">
+      <DependentUpon>Compra.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="OrdenCompra\Vistas\Compra.aspx.designer.cs">
+      <DependentUpon>Compra.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Requisicion\Model\ProductoDTO.cs" />
     <Compile Include="Requisicion\Model\RequisicionDtos\RequisicionAutorizacion.cs" />
     <Compile Include="Requisicion\Model\RequisicionDtos\RequisicionAutPutDTO.cs" />
