--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -12,6 +12,7 @@
        
     <!--Compras-->
     <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
+    <add key="GetBuscarReq" value="api/compras/buscar/requisicion/"/>
     <!--Compras-->
 
     <!--Catalogos-->    
@@ -20,6 +21,7 @@
     <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/" />
     <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
     <add key="GetListaProductos" value="api/catalogos/prodcutos/listaprodcutos/"/>
+    <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores/" />
     <!--Catalogos-->
     
     <!--Requisicion-->
