JSA-15/08/2018 Orden de compra
Avance en ordenes de compra

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.MainModule.csproj
@@ -3884,6 +3884,8 @@
     <Compile Include="Controles\DateTimePicker.ascx.designer.cs">
       <DependentUpon>DateTimePicker.ascx</DependentUpon>
     </Compile>
+    <Compile Include="OrdenCompra\Model\enumIEPS.cs" />
+    <Compile Include="OrdenCompra\Model\enumIVA.cs" />
     <Compile Include="OrdenCompra\Model\ProdcutoOC.cs" />
     <Compile Include="OrdenCompra\Model\ProveedorDTO.cs" />
     <Compile Include="OrdenCompra\Model\RequisicionOCDTO.cs" />
