--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -22,6 +22,7 @@
     <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
     <add key="GetListaProductos" value="api/catalogos/prodcutos/listaprodcutos/"/>
     <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores" />
+    <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <!--Catalogos-->
     
     <!--Requisicion-->
@@ -31,6 +32,7 @@
     <add key="GetRequisicionByNumRequisicionAut" value="api/requisicion/buscar/requisicion/autorizacion/"/>
     <add key="PutActulizarRevision" value="api/requisicion/update/requisicion/revision"/>
     <add key="PutActulizarAutorizacion" value="api/requisicion/update/requisicion/autorizacion"/>
+    <add key="PutCancelarRequisicion" value="api/requisicion/cancela/requisicion" />
     <!--Requisicion-->
 
     <!--Para el funcionamiento del token-->
