--- a/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
+++ b/1.Layers/1.3Application/1.3.2MainModule/Application.MainModule/Application.MainModule.csproj
@@ -67,6 +67,8 @@
     <Compile Include="DTOs\Catalogo\ProveedorCrearDto.cs" />
     <Compile Include="DTOs\Catalogo\ProveedorDto.cs" />
     <Compile Include="DTOs\Catalogo\ProductoDTO.cs" />
+    <Compile Include="DTOs\Catalogo\ProveedorEliminarDto.cs" />
+    <Compile Include="DTOs\Catalogo\ProveedorModificarDto.cs" />
     <Compile Include="DTOs\Catalogo\UsuarioDTO.cs" />
     <Compile Include="DTOs\Compras\RespuestaCompraDto.cs" />
     <Compile Include="DTOs\Mobile\AlmacenDto.cs" />
