--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -20,7 +20,8 @@
     <add key="GetListaEmpresas" value="api/catalogos/empresas/listaempresa" />
     <add key="GetListaEmpresascad" value="api/catalogos/empresas/listaempresa/" />
     <add key="GetListaUsuarios" value="api/catalogos/usuarios/listausuarios/" />
-    <add key="GetListaProductos" value="api/catalogos/prodcutos/listaprodcutos/"/>
+    <add key="GetListaProductos" value="api/catalogos/productos/listaproductos/"/>
+    <add key="GetListaProductosAsociados" value="api/catalogos/productos/listaproductosasociados/"/>
     <add key="GetListaProveedores" value="api/catalogos/consulta/proveedores" />
     <add key="GetCentrosCostos" value="api/catalogos/consulta/centrosdecosto" />
     <!--Catalogos-->
