--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -22,6 +22,17 @@
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
     <add key="JWT_EXPIRE_MINUTES" value="30" />
+
+    <!--CORREOS ELECTRÓNICOS-->
+    <add key="MailServidor" value="" />
+    <add key="MailPuerto" value="" />
+    <add key="MailContrasena" value="" />
+    <add key="RutaPlantillasHtml" value="~/PlantillasHtml/" />
+
+    <!--Asuntos-->
+    <add key="Asunto_RequisicionGenerarNueva" value="Nueva requisición {0}" />
+    <!--CORREOS ELECTRÓNICOS-->
+    
     <add key="AppCompraEntraGas" value="Entrada de gas - Inventario General|Registrar Papeleta|ic_papeleta" />
     <add key="AppCompraGasFinalizarDescarga" value="Entrada de gas - Inventario General|Finalizar Descarga|ic_finalizar_descarga" />
     <add key="AppCompraGasIniciarDescarga" value="Entrada de gas - Inventario General|Iniciar Descarga|ic_iniciar_descarga" />
