JSA-20/08/2018 Servicio de correo
Modificaciones al servicio de correo

--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -18,6 +18,7 @@
     <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.12;initial catalog=Sagas.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
+    <add key ="WebAppURL" value="http://localhost:54735"/>
     <add key="JWT_SECRET_KEY" value="Xnb0vbcDdIPrjhqel0YHTibiM2MU8ftO" />
     <add key="JWT_AUDIENCE_TOKEN" value="http://localhost:5469" />
     <add key="JWT_ISSUER_TOKEN" value="http://localhost:5469" />
@@ -30,7 +31,7 @@
     <add key="RutaPlantillasHtml" value="~/PlantillasHtml/" />
 
     <!--Asuntos-->
-    <add key="Asunto_RequisicionGenerarNueva" value="Nueva requisición {0}" />
+    <add key="RequisicionRevisarExistencia" value="Nueva requisición {0}" />
     <!--CORREOS ELECTRÓNICOS-->
     
     <add key="AppCompraEntraGas" value="Entrada de gas - Inventario General|Registrar Papeleta|ic_papeleta" />
