--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/Web.config
@@ -25,9 +25,9 @@
     <add key="JWT_EXPIRE_MINUTES" value="30" />
 
     <!--CORREOS ELECTRÓNICOS-->
-    <add key="MailServidor" value="" />
-    <add key="MailPuerto" value="" />
-    <add key="MailContrasena" value="" />
+    <add key="MailServidor" value="dime158.dizinc.com" />
+    <add key="MailPuerto" value="465" />
+    <add key="MailContrasena" value="Neoteck.123" />
     <add key="RutaPlantillasHtml" value="~/PlantillasHtml/" />
 
     <!--Asuntos-->
