JSA-12/08/2018 Orden de compra
Guardado
Autorización
Avance de Almacen

--- a/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
+++ b/1.Layers/1.1Presentation/1.1.1Web/Web.MainModule/Web.config
@@ -13,6 +13,7 @@
     <!--Compras-->
     <add key="PostCompraGas" value="api/compras/gas/PostCompraGas" />
     <add key="GetBuscarReq" value="api/compras/buscar/requisicion/"/>
+    <add key="PostGenerarOrdenesCompra" value="api/compras/guardar/ordencompra" />
     <!--Compras-->
 
     <!--Catalogos-->    
